Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -106,7 +106,7 @@ permalink: /idea-generator
   ];
   var randThing= thing || things[Math.floor(Math.random() * things.length)];
   var nounThing = document.querySelector('.igen-thing');
-  nounThing.innerHTML = randNoun;  
+  nounThing.innerHTML = randThing;  
   nounThing.style.color = "violet"; 
 
   // Make sure nouns are singular, a pair of shoes
