Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -74,6 +74,8 @@ permalink: /idea-generator
   // Make sure noun is singular, a pair of shoes
   var things = [
   'pair of shoes', 
+  'landscape portrait',
+  'self portrait',
   'hat', 
   'pair of sunglasses',
   'spoon',
