Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -17,7 +17,7 @@ permalink: /idea-generator
 <h3>...using a <span class="igen-tool">________</span></h3>
 
 
-<button type="button" class="button igen-save">SAVE</button> | <a class="button igen-generate" href="."><i class="fa fa-redo"></i> GENERATE NEW IDEA</a>
+<button type="button" class="button igen-save">SAVE</button> | <a class="button igen-generate" href="idea-generator"><i class="fa fa-redo"></i> GENERATE NEW IDEA</a>
 
 <!-- For the sake of visibility & learning, this code is included as inline JS. The best practice is to separate and load JS as a separate file.  -->
 <script>
