Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -76,6 +76,9 @@ permalink: /idea-generator
   'pair of shoes', 
   'landscape portrait',
   'self portrait',
+  'peanut',
+  'banana',
+  'lamp',
   'hat', 
   'pair of sunglasses',
   'spoon',
