Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -21,10 +21,11 @@ permalink: /idea-generator
 
 <style>
   .igen-adj,
+  .igen-thing,
   .igen-material,
   .igen-tool {
-    font-family:inconsolata, monospace;
-    border-bottom:dotted black 3px;
+    font-family:monospace;
+    border-bottom:solid black 5px;
     text-transform:uppercase;
   }
 </style>
