Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -71,7 +71,8 @@ permalink: /idea-generator
   'tiny',
   'miniature',
   'lugubrious',
-  'talkative',
+  'talking',
+  'musical',
   'nonfunctional',
   'hexagonal',
   'triangular',
