--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -17,7 +17,7 @@ permalink: /idea-generator
 <h2>...using <span class="igen-tool-article">a</span> <span class="igen-tool">________</span></h2>
 
 
-<button type="button" class="button igen-save">SAVE</button> | <a class="button igen-generate" href="idea-generator"><i class="fa fa-redo"></i> GENERATE NEW IDEA</a>
+<button type="button" class="button igen-save">SAVE</button>  <a class="button igen-generate" href="idea-generator"><i class="fa fa-redo"></i> GENERATE NEW IDEA</a>
 
 <style>
   .igen-adj,
