Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -88,7 +88,7 @@ permalink: /idea-generator
   var randAdj = adj || adjectives[Math.floor(Math.random() * adjectives.length)];
   var adjDiv = document.querySelector('.igen-adj');
   adjDiv.innerHTML = randAdj;
-  adjDiv.style.color = colors[Math.floor(Math.random()* colors.length];
+  adjDiv.style.color = colors[Math.floor(Math.random()* colors.length)];
   adjDiv.style.borderColor = adjDiv.style.color;
   
   // Change article from a to an if word starts with a vowel
@@ -139,7 +139,7 @@ permalink: /idea-generator
   var thingDiv = document.querySelector('.igen-thing');
   thingDiv.innerHTML = randThing;  
 
-  thingDiv.style.color = colors[Math.floor(Math.random()* colors.length];
+  thingDiv.style.color = colors[Math.floor(Math.random()* colors.length)];
   thingDiv.style.borderColor = thingDiv.style.color;
 
   // Make sure nouns are singular, a pair of shoes
@@ -167,7 +167,7 @@ permalink: /idea-generator
   var materialDiv = document.querySelector('.igen-material');
   materialDiv.innerHTML = randMaterial;  
 
-  materialDiv.style.color = colors[Math.floor(Math.random()* colors.length];
+  materialDiv.style.color = colors[Math.floor(Math.random()* colors.length)];
   materialDiv.style.borderColor = materialDiv.style.color;
 
   // Make sure nouns are singular, a pair of shoes
@@ -205,7 +205,7 @@ permalink: /idea-generator
   var randTool = tool || tools[Math.floor(Math.random() * tools.length)];
   var toolDiv = document.querySelector('.igen-tool');
   toolDiv.innerHTML = randTool; 
-  toolDiv.style.color = colors[Math.floor(Math.random()* colors.length];
+  toolDiv.style.color = colors[Math.floor(Math.random()* colors.length)];
   toolDiv.style.borderColor = toolDiv.style.color;  
   
   // Change article from a to an if word starts with a vowel
