Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -50,7 +50,9 @@ permalink: /idea-generator
     '#f9c74f',
     '#90be6d',
     '#43aa8b',
-    '#577590'
+    '#577590',
+    '#c77dff'
+    
   ];
   
   var adjectives = [
