Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -183,7 +183,7 @@ permalink: /idea-generator
   '3D scanner',
   'microcontroller',
   'pair of scissors',
-  'pair of hands',
+  'human hand',
   'toothpick',
   'audio recording device',
   'computer',
