Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -82,6 +82,8 @@ permalink: /idea-generator
   'lugubrious',
   'talking',
   'musical',
+  'funky',
+  'laughing',
   'nonfunctional',
   'hexagonal',
   'triangular',
@@ -121,6 +123,8 @@ permalink: /idea-generator
   'plant',
   'animal',
   'octopus',
+  'penguin',
+  'rabbit',
   'owl',
   'monogram',
   'stamp',
