Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -17,7 +17,7 @@ permalink: /idea-generator
 <h1>...using <span class="igen-tool-article">a</span> <span class="igen-tool">________</span></h1>
 
 
-<button type="button" class="button igen-save"><i class="fa fa-heart"></i> SAVE</button>  <a class="button igen-generate" href="javascript:window.location.reload();"><i class="fa fa-redo"></i> GENERATE NEW IDEA</a>
+<button type="button" class="button igen-save"><i class="fa fa-heart"></i> SAVE</button>  <a class="button igen-generate" href="javascript:window.location.reload();"><i class="fa fa-repeat"></i> GENERATE NEW IDEA</a>
 
 <style>
   .igen-adj,
