Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -4,7 +4,7 @@ header_image:
 permalink: /idea-generator
 ---
 
-<h4>Need help coming up with a new project idea? Try the Maker Lab Idea Generator!</h4>
+<h4>Need help coming up with a new project idea? Try our Maker Lab Idea Generator!</h4>
 <i>Note: We take no responsibility for any wacky or impossible project ideas this thing may generate. Please use responsibly ;-)</i>
 
 
