Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -96,6 +96,7 @@ permalink: /idea-generator
     Math.seedrandom();
     var randAdj = adj || adjectives[Math.floor(Math.random() * adjectives.length)];
     var adjDiv = document.querySelector('.igen-adj');
+    Math.seedrandom();
     adjDiv.innerHTML = randAdj;
     adjDiv.style.color = colors[Math.floor(Math.random()* colors.length)];
     adjDiv.style.borderColor = adjDiv.style.color;
@@ -150,7 +151,8 @@ permalink: /idea-generator
     var randThing= thing || things[Math.floor(Math.random() * things.length)];
     var thingDiv = document.querySelector('.igen-thing');
     thingDiv.innerHTML = randThing;  
-  
+    
+    Math.seedrandom();
     thingDiv.style.color = colors[Math.floor(Math.random()* colors.length)];
     thingDiv.style.borderColor = thingDiv.style.color;
   
@@ -179,7 +181,7 @@ permalink: /idea-generator
     var randMaterial = material || materials[Math.floor(Math.random() * materials.length)];
     var materialDiv = document.querySelector('.igen-material');
     materialDiv.innerHTML = randMaterial;  
-  
+    Math.seedrandom();
     materialDiv.style.color = colors[Math.floor(Math.random()* colors.length)];
     materialDiv.style.borderColor = materialDiv.style.color;
   
@@ -218,6 +220,7 @@ permalink: /idea-generator
     Math.seedrandom();
     var randTool = tool || tools[Math.floor(Math.random() * tools.length)];
     var toolDiv = document.querySelector('.igen-tool');
+    Math.seedrandom();    
     toolDiv.innerHTML = randTool; 
     toolDiv.style.color = colors[Math.floor(Math.random()* colors.length)];
     toolDiv.style.borderColor = toolDiv.style.color;  
