--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -39,10 +39,10 @@ permalink: /idea-generator
       });
       return vars;
   }
-  var adj = getUrlVars()["adj"];
-  var thing = getUrlVars()["thing"];  
-  var material = getUrlVars()["material"];
-  var tool = getUrlVars()["tool"];
+  var adj = decodeURI(getUrlVars()["adj"]);
+  var thing = decodeURI(getUrlVars()["thing"]);  
+  var material = decodeURI(getUrlVars()["material"]);
+  var tool = decodeURI(getUrlVars()["tool"]);
   var igenURL;
   
   function generateIdea() {
