Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -45,7 +45,7 @@ permalink: /idea-generator
   var toolURL = decodeURI(getUrlVars()["tool"]);
   var igenURL;
   
-  function generateIdea(adj,thing,material,tool) {
+  function generateIdea() {
     var colors = [
       '#f94144',
       '#f3722c',
