--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -46,7 +46,7 @@ permalink: /idea-generator
   var igenURL;
   
   function generateIdea(reset) {
-    if (reset == 'reset') {
+    if (reset == 'new') {
       adj = null;
       thing = null;
       material = null;
