Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -45,6 +45,7 @@ permalink: /idea-generator
   var tool = decodeURI(getUrlVars()["tool"]);
   var igenURL;
   
+  // http://cplmakerlab.github.io/idea-generator?adj=lugubrious&thing=plush monster&material=felt&tool=lasercutter
   function generateIdea(type) {
     if (type == 'new') {
       adj = null;
