--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -244,7 +244,7 @@ permalink: /idea-generator
     else {
       toolArt.innerHTML = "a";
     }
-    igenURL = encodeURI('http://cplmakerlab.github.io/idea-generator?' + 'adj=' + randAdj + '&thing=' + randThing + '&material=' + randMaterial + '&tool=' + randTool);
+    igenURL = 'http://cplmakerlab.github.io/idea-generator?' + 'adj=' + encodeURI(randAdj) + '&thing=' + encodeURI(randThing) + '&material=' + encodeURI(randMaterial) + '&tool=' + randTool;
   }
   generateIdea();
   var igenSave = function() {
