Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -224,6 +224,8 @@ permalink: /idea-generator
     'hammer', 
     'pair of chopsticks',
     'printing press',
+    'toothbrush',
+    'pair of pliers',
     'text editor',
     'machine learning algorithm'
     ];
