Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -92,6 +92,8 @@ permalink: /idea-generator
     'lugubrious',
     'talking',
     'musical',
+    'low poly',
+    'lo-fi',
     'funky',
     'laughing',
     'nonfunctional',
